2016-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/text.c (text_destroy): New 
	function.
	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_add_text): Use 
	it instead of calling free directly, because free may have been 
	redirected to Perl's version.

2016-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_new): Don't 
	call free on TEXT objects, but reuse the storage.  Attempt at 
	fixing 'Freed to wrong pool' error reported by Eli Zaretskii.

2016-01-01  Eli Zaretskii  <eliz@gnu.org>

	* tp/Texinfo/Convert/XSParagraph/xspara.c (mbrtowc): Don't try to
	convert more bytes than a single UTF-8 sequence at the beginning
	of the argument string: otherwise MultiByteToWideChar fails.

2016-01-01  Karl Berry  <karl@gnu.org>

	* makeinfo/README,
	* tp/Texinfo/Convert/Converter.pm,
	* util/dir-example,
	* build-aux/texinfo.tex: sync.
	
	* info/dir.c,
	* info/echo-area.h,
	* info/filesys.c,
	* info/indices.c,
	* info/indices.h,
	* info/info-utils.h,
	* info/infodoc.c,
	* info/infomap.c,
	* info/nodemenu.c,
	* info/search.c,
	* info/search.h,
	* info/session.h,
	* info/termdep.h,
	* info/window.h,
	* system.h,

	* Pod-Simple-Texinfo/pod2texi.pl,
	* doc/refcard/txirefcard.tex,
	* doc/texinfo.texi,
	* info/info.c,
	* install-info/install-info.c,
	* texindex/ti.twjr,
	* tp/maintain/regenerate_cmd_tests.sh,
	* tp/maintain/regenerate_docstr.sh,
	* tp/maintain/regenerate_file_lists.pl,
	* tp/maintain/template.pod,
	* tp/texi2any.pl,
	* util/pdftexi2dvi,
	* util/texi-elements-by-size,
	* util/texi2dvi,
	* util/texi2pdf,
	* util/texindex.bat: 2016.

2016-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/Makefile.am: Remove out-of-date 
	comment at start of file and add copyright notice.
	* tp/Texinfo/Convert/XSParagraph/configure.ac: Add copyright 
	notice.

2016-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/Makefile.am